--- a/ApexQuality/uis/spectral_kmean_widget_base.ui
+++ b/ApexQuality/uis/spectral_kmean_widget_base.ui
@@ -6,15 +6,38 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>337</width>
-    <height>220</height>
+    <width>339</width>
+    <height>268</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>K-means Clustering</string>
+   <string>Unsupervised classification</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="0" colspan="2">
+   <item row="3" column="0">
+    <widget class="QRadioButton" name="restrictedRB">
+     <property name="text">
+      <string>Restricted extend</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">buttonGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QRadioButton" name="wholeRB">
+     <property name="text">
+      <string>Whole image</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">buttonGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -61,7 +84,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
+   <item row="5" column="0" colspan="2">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Output</string>
@@ -73,7 +96,7 @@
          <string>Geotiff</string>
         </property>
         <property name="checked">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -82,12 +105,18 @@
         <property name="text">
          <string>PyPlot</string>
         </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QCheckBox" name="pdfCB">
         <property name="text">
          <string>PDF</string>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -131,4 +160,7 @@
    </hints>
   </connection>
  </connections>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
